fix alignment on product page

--- a/src/pages/user/product/style.module.scss
+++ b/src/pages/user/product/style.module.scss
@@ -1,18 +1,24 @@
 .container {
   // border: 2px dashed gray;
+  padding: 0 50px;
   margin-top: 70px;
   .selectionBox {
-    padding: 10px;
+    padding: 20px;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    align-items: start;
+    gap: 50px;
     margin-bottom: 50px;
     .imageBox {
-      flex: 1;
+      flex: 2;
       display: flex;
-      align-items: center;
+      // align-items: center;
       justify-content: center;
       .box {
+        .mainImage {
+          width: 100%;
+          max-width: 500px;
+        }
         .galleryBox {
           margin: 10px 0;
           display: flex;
@@ -23,8 +29,8 @@
     }
     .detailBox {
       display: flex;
-      align-items: center;
-      justify-content: center;
+      align-items: start;
+      flex: 1;
       .box {
         width: 100%;
         max-width: 350px;
@@ -32,8 +38,6 @@
         padding: 20px;
         border-radius: 10px;
       }
-      flex: 1;
-      // border: 2px dashed brown;
       .title {
         margin-bottom: 20px;
       }
@@ -77,7 +81,7 @@
     gap: 50px;
     flex-wrap: wrap;
     align-items: start;
-    padding: 0 50px;
+
     margin-bottom: 50px;
     .productDetailBox {
       padding: 20px;
@@ -127,7 +131,6 @@
     gap: 50px;
     flex-wrap: wrap;
     align-items: start;
-    padding: 0 50px;
     margin-bottom: 50px;
     .innerBox {
       // box-shadow: 0 0 10px 0 rgba(#000, 0.1);
